[package]
name = "blogapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
chrono = {version = "0.4.24", features = ["serde"]}
diesel = {version = "2.0.3", features = ["postgres", "r2d2", "chrono"]}
dotenv = "0.15.0"
serde = {version="1.0.159", features=["derive"]}
serde_json = "1.0.95"
